import MaterialIcons from "@expo/vector-icons/MaterialIcons";
import { Tabs } from "expo-router";
import { Platform } from "react-native";

export default function TabsLayout() {
  return (
    <Tabs screenOptions={{ headerShown: false, animation: "shift" }}>
      <Tabs.Screen
        name="index"
        options={{
          title: "Home",
          tabBarIcon: ({ color, size }) => (
            <MaterialIcons name="home" color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          tabBarIcon: ({ color, size }) => (
            <MaterialIcons name="settings" color={color} size={size} />
          ),
          headerShown: true,
          headerTitle: "Settings Title",
        }}
      />
      <Tabs.Screen
        name="admin"
        options={{
          title: "Admin",
          tabBarButtonTestID: "admin-tab-button",
          tabBarIcon: ({ color }) => (
            <MaterialIcons
              size={28}
              name="admin-panel-settings"
              color={color}
            />
          ),
        }}
      />
      <Tabs.Protected guard={Platform.OS === "ios"}>
        <Tabs.Screen
          name="swift-ui"
          options={{
            title: "Swift UI",
            tabBarIcon: ({ color }) => (
              <MaterialIcons size={28} name="smartphone" color={color} />
            ),
          }}
        />
      </Tabs.Protected>
      <Tabs.Screen
        name="gestures-animations"
        options={{
          title: "Gest/Anim",
          tabBarIcon: ({ color }) => (
            <MaterialIcons size={28} name="animation" color={color} />
          ),
        }}
      />
    </Tabs>
  );
}
