...
        <Text>You don't have access</Text>
        <Button
          onPress={() =>
            setUser((prev) => ({ ...prev, role: UserRole.Admin }) as User)
          }
        >
          Become an Admin
        </Button>
      </View>
    );
  }
  return (
    <View style={styles.container}>
...
