...
      style={{
        flex: 1,
        justifyContent: "center",
        alignItems: "center",
      }}
    >
      <Text testID="home-screen">Home Screen</Text>
      <Text>
        Expo ENV: {process.env.EXPO_PUBLIC_API_BASE_URL} (
        {process.env.EXPO_PUBLIC_VARIABLE})
      </Text>
      <Text>Edit app/index.tsx to edit this screen.</Text>
      <Link href="/deeplinking/1">Go to deeplinking details</Link>
      <Link href="/profile">Go to profile</Link>
      <Link href="/profile/settings">Go to profile setting</Link>
      <Link
        href={{
          pathname: "/profile/[id]",
          params: {
            id: getRandomGithubAvatar(),
          },
...
