import React from "react";
import { Text, View } from "react-native";

export default function ProfileSettingsModal() {
  return (
    <View
      style={{
        flex: 1,
        justifyContent: "center",
        alignItems: "center",
      }}
    >
      <Text>Profile Settings without Tab</Text>
    </View>
  );
}
